Chos/ssh/ingress-controller/ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adapt-ingress
  namespace: ingress-web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: web.adapt.com
      http:
        paths:
           - path: /
             pathType: Prefix
             backend:
                  service:
                       name: myapp-svc
                       port:
                         number: 80
           - path: /blue
             pathType: Prefix
             backend:
                  service:
                       name: blueteam
                       port:
                         number: 80
